SERVER-59525 TenantMigrationRecipientAccessBlocker isn't being initialized correctly on recovery